testsuite/poke.pkl/struct-method-diag-4.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int i;
    method foo = int:
      {
        fun bar = int:
        {
          return i; /* { dg-error "invalid.*field" } */
        }

        return bar + 20;
      }
  };
